--- a/frontend/static/global.css
+++ b/frontend/static/global.css
@@ -1,6 +1,4 @@
 body {
-    color: white;
-    background-color: #000000;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -14,16 +12,12 @@ iframe {
     border-radius: 100px;
 }
 
-::-webkit-scrollbar-track {
-    background: #000;
-}
-
 ::-webkit-scrollbar-thumb {
     height: 5%;
-    background: #fff;
+    background: #000;
     border-radius: 100px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #eee;
+    background: #ccc;
 }
