--- a/frontend/static/global.css
+++ b/frontend/static/global.css
@@ -6,3 +6,24 @@ iframe {
     width: 100%;
     border: none;
 }
+
+::-webkit-scrollbar {
+  width: 5px; /* Width of the entire scrollbar */
+}
+
+/* Track background */
+::-webkit-scrollbar-track {
+  background: #f0f0f0; /* Background color of the scrollbar track */
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  width: 10px;
+  background: #888; /* Color of the scrollbar handle */
+  border-radius: 8px; /* Rounded corners of the handle */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the scrollbar handle on hover */
+}
