fixed image scrolling bugs in epub viewer

--- a/frontend/static/global.css
+++ b/frontend/static/global.css
@@ -11,13 +11,15 @@ iframe {
 
 ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
 }
-
 ::-webkit-scrollbar-thumb {
     background: #888;
     border-radius: 8px;
 }
-
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+::-webkit-scrollbar-corner {
+    display: none;
 }
