--- a/frontend/static/global.css
+++ b/frontend/static/global.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
+
+:root {
+    --accent-color: #76b3b3;
+    --accent-color-darken: #5e8f8f;
+}
+
 body {
     color: white;
     background-color: #101010;
@@ -7,6 +14,20 @@ body {
 iframe {
     width: 100%;
     border: none;
+}
+
+a {
+    cursor: pointer;
+    color: var(--accent-color);
+}
+
+a:hover, a:active {
+    color: var(--accent-color-darken);
+}
+
+button {
+    border: none;
+    cursor: pointer;
 }
 
 ::-webkit-scrollbar {
@@ -22,4 +43,9 @@ iframe {
 }
 ::-webkit-scrollbar-corner {
     display: none;
+}
+
+.logo {
+    color: var(--accent-color);
+    font-family: 'Yellowtail', cursive;
 }
