navbar and book frontend component

--- a/frontend/static/global.css
+++ b/frontend/static/global.css
@@ -3,6 +3,7 @@
 :root {
     --accent-color: #76b3b3;
     --accent-color-darken: #5e8f8f;
+    --background-accent: #1b1c1c;
 }
 
 body {
@@ -18,6 +19,7 @@ iframe {
 
 a {
     cursor: pointer;
+    text-decoration: none;
     color: var(--accent-color);
 }
 
