delete account and demo epub drag and drop upload

--- a/frontend/static/global.css
+++ b/frontend/static/global.css
@@ -4,6 +4,7 @@
     --accent-color: #76b3b3;
     --accent-color-darken: #5e8f8f;
     --background-accent: #1b1c1c;
+    --navbar-height: 45px;
 }
 
 body {
